added developer mode unstyled toggle

--- a/MVVM/View/ControlScreenView.xaml
+++ b/MVVM/View/ControlScreenView.xaml
@@ -15,49 +15,28 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <ComboBox Margin="19,36,19,0" SelectedIndex="0">
-            <ComboBoxItem Content="0" />
-            <ComboBoxItem Content="1" />
-            <ComboBoxItem Content="2" />
-            <ComboBoxItem Content="3" />
-            <ComboBoxItem Content="4" />
-            <ComboBoxItem Content="5" />
-            <ComboBoxItem Content="6" />
-            <ComboBoxItem Content="7" />
-            <ComboBoxItem Content="8" />
-            <ComboBoxItem Content="9" />
-            <ComboBoxItem Content="10" />
-            <ComboBoxItem Content="11" />
-            <ComboBoxItem Content="12" />
-            <ComboBoxItem Content="13" />
-            <ComboBoxItem Content="14" />
-            <ComboBoxItem Content="15" />
-            <ComboBoxItem Content="16" />
-            <ComboBoxItem Content="17" />
-            <ComboBoxItem Content="18" />
-        </ComboBox>
-
         <TextBlock
             Width="112"
             Height="16"
-            Margin="34,16,0,0"
-            HorizontalAlignment="Left"
+            Margin="0,16,0,0"
+            HorizontalAlignment="Center"
             VerticalAlignment="Top"
             FontFamily="Consolas"
             FontSize="14"
-            Text="setLogState"
+            Text="Developer Mode"
             TextWrapping="Wrap" />
         <TextBlock
             Grid.Row="1"
             Width="112"
             Height="16"
-            Margin="34,13,0,0"
-            HorizontalAlignment="Left"
+            Margin="0,13,0,0"
+            HorizontalAlignment="Center"
             VerticalAlignment="Top"
             FontFamily="Consolas"
             FontSize="14"
             RenderTransformOrigin="0.518,-1.104"
             Text="IP Address"
+            TextAlignment="Center"
             TextWrapping="Wrap" />
         <Border
             Grid.Row="1"
@@ -131,5 +110,11 @@
                 FontSize="13" />
 
         </Grid>
+        <CheckBox
+            x:Name="developerModeToggle"
+            Margin="0,37,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="" />
     </Grid>
 </UserControl>
