--- a/MVVM/View/UserFoundScreenView.xaml
+++ b/MVVM/View/UserFoundScreenView.xaml
@@ -58,23 +58,15 @@
                     x:Name="welcomeRibbon"
                     Grid.Column="1"
                     Grid.ColumnSpan="2"
-                    Canvas.Left="683"
-                    Canvas.Top="10"
+                    Canvas.Left="720"
+                    Canvas.Top="13"
                     Width="500"
                     Height="75"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Center">
+                    VerticalAlignment="Top">
                     <Border.Background>
-                        <ImageBrush ImageSource="/QEAMApp;component/Images/Welcome Ribbon.png" Stretch="Uniform" />
+                        <ImageBrush ImageSource="/QEAMApp;component/Images/morning_ribbon.png" Stretch="Uniform" />
                     </Border.Background>
-                    <Viewbox Width="230" Margin="125,0,125,0">
-                        <TextBlock
-                            FontFamily="Poppins"
-                            FontWeight="Bold"
-                            Foreground="White"
-                            Text="Morning Attendance"
-                            TextWrapping="Wrap" />
-                    </Viewbox>
                 </Border>
             </Canvas>
 
