added export button functionality normally placed in "bin" folder

--- a/MVVM/View/ControlScreenView.xaml
+++ b/MVVM/View/ControlScreenView.xaml
@@ -106,6 +106,7 @@
                 VerticalAlignment="Top"
                 Background="#FFE9E9E9"
                 BorderBrush="#FFACACAC"
+                Command="{Binding ExportCommand}"
                 Content="Export"
                 FontFamily="Consolas"
                 FontSize="13" />
